--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head>✨Achraf's Website! ✨</head>
+  <head><title>✨Achraf's Website! ✨</title></head>
   <body>
     Hi ^^!
   </body>
